Fixed last known bug with adding and acceptind date not showing in versions, added awesome header and footer pics

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,18 @@ body.lining {
 	padding-right: 200px;
 }
 
+#frontpic {
+	position:absolute;
+	top:0em;
+	left:0em;
+}
+
+#frontpic2 {
+	position:fixed;
+	bottom:0em;
+	right:2em;
+}
+
 a:hover {
 	text-decoration: none;
 }
@@ -31,6 +43,10 @@ p, h1, form {
 button {
 	border: 0px;
 	background-color: transparent;
+}
+
+.middle {
+	margin-left:16em;
 }
 
 .center {
@@ -127,12 +143,13 @@ label#Add{
 }
 
 iframe#main {
+	margin-top:13em;
 	width: 99%;
 	border: 0px;
 	position: fixed;
 	z-index: -1;
 	right: 10px;
-	height: 98%;
+	height: 80%;
 }
 
 .ideabox {
